--- a/src/com/raven/form/Compra_Form.form
+++ b/src/com/raven/form/Compra_Form.form
@@ -82,7 +82,7 @@
                       <Component id="jTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButton4" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="500" max="-2" attributes="0"/>
                   <Component id="jScrollPane" pref="366" max="32767" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
